add buttom menu-mobile

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           ENTREGA<span>EXPRESSA</span
           ><img src="./assets/svg/rocket.svg" alt="entrega expressa" />
         </p>
-        <p class="rewards-bar">
+        <span class="rewards-bar">
           <span>TROQUE</span> EM QUALQUER LOJA<img
             src="./assets/svg/troca.svg"
             alt="troque em qualquer loja"
           />
-        </p>
+        </span>
         <p class="rewards-bar">
           ATÉ 6X <span>SEM JUROS</span
           ><img src="./assets/svg/card.svg" alt="" />
@@ -40,11 +40,13 @@
           ><img src="./assets/svg/gift.svg" alt="" />
         </p>
       </div>
+
       <div class="header-bottom">
         <img src="./assets/svg/logo_buckman.svg" alt="Logo Buckman" />
         <nav class="buckman-navbar">
-          <button data-menu="button">Menu</button>
+          <button data-menu="button"></button>
           <ul data-menu="list" id="menu" class="buckman__ul">
+            <!-- <button data-menu="button">Menu</button> -->
             <li class="buckman__li"><a href="#">ROUPAS</a></li>
             <li class="buckman__li"><a href="#">NOVIDADES</a></li>
             <li class="buckman__li"><a href="#">BÁSICOS</a></li>
