add mini cart e button mobile fixed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
       </div>
 
       <div class="header-bottom">
-        <img src="./assets/svg/logo_buckman.svg" alt="Logo Buckman" />
+        <img
+          class="buckman-logo"
+          src="./assets/svg/logo_buckman.svg"
+          alt="Logo Buckman"
+        />
         <nav class="buckman-navbar">
           <button data-menu="button"></button>
           <ul data-menu="list" id="menu" class="buckman__ul">
@@ -80,4 +84,5 @@
       </div>
     </header>
   </body>
+  <script src="./menu-mobile.js"></script>
 </html>
