add arquivos responsividade

--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
         <nav class="buckman-navbar">
           <button data-menu="button"></button>
           <ul data-menu="list" id="menu" class="buckman__ul">
-            <!-- <button data-menu="button">Menu</button> -->
             <li class="buckman__li"><a href="#">ROUPAS</a></li>
-            <li class="buckman__li"><a href="#">NOVIDADES</a></li>
+            <li class="buckman__li">
+              <a href="#">NOVIDADES</a>
+              <div><!-- fazer sidebar aqui --></div>
+            </li>
+
             <li class="buckman__li"><a href="#">BÁSICOS</a></li>
             <li class="buckman__li"><a href="#">ALFAIATARIAS</a></li>
             <li class="buckman__li"><a href="#">CALÇADOS</a></li>
