add function hide logo and search-bar

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
       <div class="header-bottom">
         <img
+          data-menu="logo"
           class="buckman-logo"
           src="./assets/svg/logo_buckman.svg"
           alt="Logo Buckman"
@@ -69,7 +70,7 @@
           </ul>
         </nav>
 
-        <div class="search-bar">
+        <div data-menu="search-bar" class="search-bar">
           <input
             placeholder="O que você está procurando?"
             type="search"
