add fucntion hide minicart

--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
         </div>
 
         <div class="header-direito">
-          <a class="nossas-lojas" class="category-on" href="#"
+          <a class="nossas-lojas" href="#"
             ><img src="./assets/svg/location.svg"</a
           >
 
-          <a class="login" class="category-on" href="#"
-            ><img src="./assets/svg/login.svg"</a
-          >
+          <a class="login" href="#"><img src="./assets/svg/login.svg"</a>
 
-          <a class="minicart" href="#"><img src="./assets/svg/minicart.svg"</a>
+          <a data-menu="minicart" class="minicart" href="#"
+            ><img src="./assets/svg/minicart.svg"</a
+          >
         </div>
       </div>
     </header>
