--- a/index.html
+++ b/index.html
@@ -83,15 +83,27 @@
         </div>
 
         <div class="header-direito">
-          <a class="nossas-lojas" href="#"
-            ><img src="./assets/svg/location.svg"</a
-          >
+          <button>
+            <a class="nossas-lojas" href="#"
+              ><img src="./assets/svg/location.svg"</a
+            >
+          </button>
 
-          <a class="login" href="#"><img src="./assets/svg/login.svg"</a>
+          <button>
+            <a class="login" href="#"><img src="./assets/svg/login.svg" /></a>
+          </button>
 
-          <a data-menu="minicart" class="minicart" href="#"
-            ><img src="./assets/svg/minicart.svg"</a
-          >
+          <button>
+            <a data-menu="mobile-close" class="mobile-close" href="#"
+              ><img src="./assets/svg/x-close.svg"
+            /></a>
+          </button>
+
+          <button>
+            <a data-menu="minicart" class="minicart" href="#"
+              ><img src="./assets/svg/minicart.svg"
+            /></a>
+          </button>
         </div>
       </div>
     </header>
