adiciona mobile-close segunda tela mobile

--- a/index.html
+++ b/index.html
@@ -83,26 +83,20 @@
         </div>
 
         <div class="header-direito">
-          <button>
-            <a class="nossas-lojas" href="#"
-              ><img src="./assets/svg/location.svg"</a
-            >
+          <button class="nossas-lojas">
+            <a href="#"><img src="./assets/svg/location.svg"</a>
           </button>
 
-          <button>
-            <a class="login" href="#"><img src="./assets/svg/login.svg" /></a>
+          <button class="login">
+            <a href="#"><img src="./assets/svg/login.svg" /></a>
           </button>
 
-          <button>
-            <a data-menu="mobile-close" class="mobile-close" href="#"
-              ><img src="./assets/svg/x-close.svg"
-            /></a>
+          <button data-menu="mobile-close" class="mobile-close">
+            <a href="#"><img src="./assets/svg/x-close.svg" /></a>
           </button>
 
-          <button>
-            <a data-menu="minicart" class="minicart" href="#"
-              ><img src="./assets/svg/minicart.svg"
-            /></a>
+          <button data-menu="minicart" class="minicart">
+            <a href="#"><img src="./assets/svg/minicart.svg" /></a>
           </button>
         </div>
       </div>
