--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <li class="buckman__li"><a href="#">ALFAIATARIAS</a></li>
             <li class="buckman__li"><a href="#">CALÇADOS</a></li>
             <li class="buckman__li"><a href="#">OUTLET</a></li>
+            <hr class="line-mobile" />
           </ul>
         </nav>
 
@@ -77,7 +78,7 @@
             id="site-search"
           /><button>
             <a href="#">
-              <img clas="search-icon" src="./assets/svg/search.svg"
+              <img class="search-icon" src="./assets/svg/search.svg"
             /></a>
           </button>
         </div>
