add nossas lojas e login tela 2 mobile

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
         </div>
 
         <div class="header-direito">
-          <button class="nossas-lojas">
+          <button data-menu="nossas-lojas" class="nossas-lojas">
             <a href="#"><img src="./assets/svg/location.svg"</a>
           </button>
 
-          <button class="login">
+          <button data-menu="login" class="login">
             <a href="#"><img src="./assets/svg/login.svg" /></a>
           </button>
 
