adiciona icones 2 tela

--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
           <button data-menu="login" class="login">
             <a href="#"><img src="./assets/svg/login.svg" /></a>
           </button>
+          <button data-menu="favoritos" class="favoritos">
+            <a href="#"><img src="./assets/svg/heart.svg" /></a>
+          </button>
+          <button data-menu="fale-conosco" class="fale-conosco">
+            <a href="#"><img src="./assets/svg/fale-conosco.svg" /></a>
+          </button>
+          <button data-menu="entrar" class="entrar">
+            <a href="#"><img src="./assets/svg/entrar.svg" /></a>
+          </button>
 
           <button data-menu="mobile-close" class="mobile-close">
             <a href="#"><img src="./assets/svg/x-close.svg" /></a>
