--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         />
         <nav class="buckman-navbar">
           <button data-menu="button"></button>
+          <button data-menu="mobile-close" class="mobile-close">
+            <a href="#"><img src="./assets/svg/x-close.svg" /></a>
+          </button>
 
           <ul data-menu="list" id="menu" class="buckman__ul">
             <li class="buckman__li"><a href="#">ROUPAS</a></li>
@@ -82,27 +85,26 @@
             /></a>
           </button>
         </div>
-
-        <div class="header-direito">
-          <button data-menu="nossas-lojas" class="nossas-lojas">
-            <a href="#"><img src="./assets/svg/location.svg"</a>
-          </button>
-
+        <!--  <button data-menu="mobile-close" class="mobile-close">
+          <a href="#"><img src="./assets/svg/x-close.svg" /></a>
+        </button> -->
+        <div data-menu="header-direito" class="header-direito">
           <button data-menu="login" class="login">
             <a href="#"><img src="./assets/svg/login.svg" /></a>
           </button>
           <button data-menu="favoritos" class="favoritos">
-            <a href="#"><img src="./assets/svg/heart.svg" /></a>
+            <a href="#"><img src="./assets/svg/heart.svg" />Favoritos</a>
+          </button>
+          <button data-menu="nossas-lojas" class="nossas-lojas">
+            <a href="#"><img src="./assets/svg/location.svg"</a>
           </button>
           <button data-menu="fale-conosco" class="fale-conosco">
-            <a href="#"><img src="./assets/svg/fale-conosco.svg" /></a>
+            <a href="#"
+              ><img src="./assets/svg/fale-conosco.svg" />Fale Conosco</a
+            >
           </button>
           <button data-menu="entrar" class="entrar">
-            <a href="#"><img src="./assets/svg/entrar.svg" /></a>
-          </button>
-
-          <button data-menu="mobile-close" class="mobile-close">
-            <a href="#"><img src="./assets/svg/x-close.svg" /></a>
+            <a href="#"><img src="./assets/svg/entrar.svg" />Entrar</a>
           </button>
 
           <button data-menu="minicart" class="minicart">
