add dropdown menu

--- a/index.html
+++ b/index.html
@@ -64,16 +64,18 @@
           </button>
 
           <ul data-menu="list" id="menu" class="buckman__ul">
-            <li class="buckman__li"><a href="#">ROUPAS</a></li>
             <li class="buckman__li">
+              <a href="#">ROUPAS</a>
+            </li>
+            <li data-dropdown class="buckman__li">
               <a href="#">NOVIDADES</a>
-              <!--     <ul class="submenu-novidades">
+              <ul class="dropdown-menu">
                 <li><a href="#">Blusas</a></li>
                 <li><a href="#">Calças</a></li>
                 <li><a href="#">Calças Jeans</a></li>
                 <li><a href="#">Camisas</a></li>
                 <li><a href="#">Camisetas</a></li>
-              </ul> -->
+              </ul>
             </li>
             <li class="buckman__li"><a href="#">BÁSICOS</a></li>
             <li class="buckman__li"><a href="#">ALFAIATARIAS</a></li>
@@ -119,6 +121,6 @@
       </div>
     </header>
     <script src="./menu-mobile.js"></script>
-    <script src="./menu-category.js"></script>
+    <script src="./dropdown-menu.js"></script>
   </body>
 </html>
