add titulos e reestrutura icones footer tela 2 mobile

--- a/index.html
+++ b/index.html
@@ -169,23 +169,28 @@
               <hr class="line-mobile" />
             </ul>
             <div class="navbar-mobile-footer">
-              <ul>
+              <ul class="navbar-mobile-footer-ul">
                 <li data-menu="login" class="login">
+                  <span class="social-login-title">Minha Conta</span>
                   <a href="#"><img src="./assets/svg/login.svg" /></a>
                 </li>
                 <li data-menu="nossas-lojas" class="nossas-lojas">
+                  <span class="social-login-lojas">Nossas Lojas</span>
                   <a href="#"><img src="./assets/svg/location.svg" /></a>
                 </li>
                <!--  <li data-menu="minicart" class="minicart">
                   <a href="#"><img src="./assets/svg/minicart.svg" /></a>
                 </li> -->
                 <li data-menu="favoritos" class="favoritos">
+                  <span class="social-login-favoritos">Favoritos</span>
                   <a href="#"><img src="./assets/svg/heart.svg" /></a>
                 </li>
                 <li data-menu="fale-conosco" class="fale-conosco">
+                  <span class="social-login-fale-conosco">Fale Conosco</span>
                   <a href="#"><img src="./assets/svg/fale-conosco.svg" /></a>
                 </li>
                 <li data-menu="entrar" class="entrar">
+                  <span class="social-login-entrar">Entrar</span>
                   <a href="#"><img src="./assets/svg/entrar.svg" /></a>
                 </li>
               </ul>              
