--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <button data-menu="minicart" class="minicart">
             <a href="#"><img src="./assets/svg/minicart.svg" /></a>
           </button>
-          </div>
+      </div>
       <div class="header-bottom">
         
         <img
@@ -155,7 +155,7 @@
                 id="#outlet"
                 data-menu="outlet"
                 data-dropdown
-                class="buckman__li"
+                class="buckman__li outlet"
               >
                 <a class="outlet" href="#outlet">OUTLET</a>
                 <ul class="dropdown-menu">
