altera espaçamento logo mobile

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           <button data-menu="minicart" class="minicart">
             <a href="#"><img src="./assets/svg/minicart.svg" /></a>
           </button>
-      </div>
-      <div class="header-bottom">
+          </div>
+      <div class="header-bottom mobile">
         
         <img
           data-menu="logo"
