altera cor link outlet

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a href="#"><img src="./assets/svg/minicart.svg" /></a>
           </button>
           </div>
-      <div class="header-bottom mobile">
+      <div class="header-bottom">
         
         <img
           data-menu="logo"
@@ -73,7 +73,7 @@
               </button>
             </div>
             <ul data-menu="list" id="menu" class="buckman__ul">
-              <li id="#roupas" data-dropdown class="buckman__li menu-dropdo">
+              <li id="#roupas" data-dropdown class="buckman__li menu-dropdown">
                 <a href="#roupas">ROUPAS</a>
                 <div class="dropdown-wrapper">
                   <div class="dropdown-wrapper-header">
@@ -91,80 +91,95 @@
                   </ul>
                 </div>
               </li>
-              <li
-                id="#novidades"
-                data-menu="novidades"
-                data-dropdown
-                class="buckman__li"
-              >
-                <a href="#novidades">NOVIDADES</a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Blusas</a></li>
-                  <li><a href="#">Calças</a></li>
-                  <li><a href="#">Calças Jeans</a></li>
-                  <li><a href="#">Camisas</a></li>
-                  <li><a href="#">Camisetas</a></li>
-                </ul>
+                <li data-dropdown class="buckman__li menu-dropdown">
+                <a href="#roupas">NOVIDADES</a>
+                <div class="dropdown-wrapper">
+                  <div class="dropdown-wrapper-header">
+                    <span>Novidades</span>
+                    <button data-menu="dropdown-wrapper-close" class=dropdown-wrapper-close">
+                      <img src="./assets/svg/x-close.svg"/>
+                    </button>
+                  </div>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                  </ul>
+                </div>
               </li>
-              <li
-                id="#basicos"
-                data-menu="basicos"
-                data-dropdown
-                class="buckman__li"
-              >
-                <a href="#basicos">BÁSICOS</a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                </ul>
+              <li data-dropdown class="buckman__li menu-dropdown">
+                <a href="#">BÁSICOS</a>
+                <div class="dropdown-wrapper">
+                  <div class="dropdown-wrapper-header">
+                    <span>Bássicos</span>
+                    <button data-menu="dropdown-wrapper-close" class=dropdown-wrapper-close">
+                      <img src="./assets/svg/x-close.svg"/>
+                    </button>
+                  </div>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                  </ul>
+                </div>
               </li>
-              <li
-                id="#alfaiatarias"
-                data-menu="alfaiatarias"
-                data-dropdown
-                class="buckman__li"
-              >
-                <a href="#alfaiatarias">ALFAIATARIAS </a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                </ul>
+             <li data-dropdown class="buckman__li menu-dropdown">
+                <a href="#">ALFAIATARIAS</a>
+                <div class="dropdown-wrapper">
+                  <div class="dropdown-wrapper-header">
+                    <span>Alfaiatarias</span>
+                    <button data-menu="dropdown-wrapper-close" class=dropdown-wrapper-close">
+                      <img src="./assets/svg/x-close.svg"/>
+                    </button>
+                  </div>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                  </ul>
+                </div>
               </li>
-              <li
-                id="#calcados"
-                data-menu="calcados"
-                data-dropdown
-                class="buckman__li"
-              >
-                <a href="#calcados">CALÇADOS</a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                </ul>
+             <li data-dropdown class="buckman__li menu-dropdown">
+                <a href="#">CALÇADOS</a>
+                <div class="dropdown-wrapper">
+                  <div class="dropdown-wrapper-header">
+                    <span>Calçados</span>
+                    <button data-menu="dropdown-wrapper-close" class=dropdown-wrapper-close">
+                      <img src="./assets/svg/x-close.svg"/>
+                    </button>
+                  </div>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                  </ul>
+                </div>
               </li>
-              <li
-                id="#outlet"
-                data-menu="outlet"
-                data-dropdown
-                class="buckman__li outlet"
-              >
-                <a class="outlet" href="#outlet">OUTLET</a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                  <li><a href="#">item</a></li>
-                </ul>
+              <li data-dropdown class="buckman__li outlet menu-dropdown">
+                <a class="outlet" href="#">OUTLET</a>
+                <div class="dropdown-wrapper">
+                  <div class="dropdown-wrapper-header">
+                    <span>Outlet</span>
+                    <button data-menu="dropdown-wrapper-close" class=dropdown-wrapper-close">
+                      <img src="./assets/svg/x-close.svg"/>
+                    </button>
+                  </div>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                  </ul>
+                </div>
               </li>
               <hr class="line-mobile" />
             </ul>
