add novo comportamento mobile e links

--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
           <div class="navbar-wrapper">
             <div class="navbar-mobile-header">
               <span class="navbar-mobile-title">Menu</span>
+              
               <button data-menu="mobile-close" class="mobile-close">
                 <img src="./assets/svg/x-close.svg" />
               </button>
             </div>
+            
             <ul data-menu="list" id="menu" class="buckman__ul">
               <li id="#roupas" data-dropdown class="buckman__li menu-dropdown">
                 <a href="#roupas">ROUPAS</a>
@@ -145,7 +147,7 @@
                   </ul>
                 </div>
               </li>
-             <li data-dropdown class="buckman__li menu-dropdown">
+             <li data-dropdown class="buckman__li calcados menu-dropdown">
                 <a href="#">CALÇADOS</a>
                 <div class="dropdown-wrapper">
                   <div class="dropdown-wrapper-header">
