--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             </div>
             
             <ul data-menu="list" id="menu" class="buckman__ul">
-              <li id="#roupas" data-dropdown class="buckman__li menu-dropdown">
-                <a href="#roupas">ROUPAS</a>
+              <li data-dropdown class="buckman__li roupas menu-dropdown">
+                <a class="roupas" href="#">ROUPAS</a>
                 <div class="dropdown-wrapper">
                   <div class="dropdown-wrapper-header">
                     <span>Roupas</span>
@@ -92,30 +92,11 @@
                     <li><a href="#">item</a></li>
                   </ul>
                 </div>
-              </li>
-                <li data-dropdown class="buckman__li menu-dropdown">
-                <a href="#roupas">NOVIDADES</a>
+              </li><li data-dropdown class="buckman__li novidades menu-dropdown">
+                <a class="novidades" href="#">NOVIDADES</a>
                 <div class="dropdown-wrapper">
                   <div class="dropdown-wrapper-header">
-                    <span>Novidades</span>
-                    <button data-menu="dropdown-wrapper-close" class=dropdown-wrapper-close">
-                      <img src="./assets/svg/x-close.svg"/>
-                    </button>
-                  </div>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Blusas</a></li>
-                    <li><a href="#">Calças</a></li>
-                    <li><a href="#">Calças Jeans</a></li>
-                    <li><a href="#">Camisas</a></li>
-                    <li><a href="#">Camisetas</a></li>
-                  </ul>
-                </div>
-              </li>
-              <li data-dropdown class="buckman__li menu-dropdown">
-                <a href="#">BÁSICOS</a>
-                <div class="dropdown-wrapper">
-                  <div class="dropdown-wrapper-header">
-                    <span>Bássicos</span>
+                    <span>NOVIDADES</span>
                     <button data-menu="dropdown-wrapper-close" class=dropdown-wrapper-close">
                       <img src="./assets/svg/x-close.svg"/>
                     </button>
@@ -129,11 +110,12 @@
                   </ul>
                 </div>
               </li>
-             <li data-dropdown class="buckman__li menu-dropdown">
-                <a href="#">ALFAIATARIAS</a>
+               
+              <li data-dropdown class="buckman__li BASICOS menu-dropdown">
+                <a class="BASICOS" href="#">BÁSICOS</a>
                 <div class="dropdown-wrapper">
                   <div class="dropdown-wrapper-header">
-                    <span>Alfaiatarias</span>
+                    <span>Básicos</span>
                     <button data-menu="dropdown-wrapper-close" class=dropdown-wrapper-close">
                       <img src="./assets/svg/x-close.svg"/>
                     </button>
@@ -147,8 +129,26 @@
                   </ul>
                 </div>
               </li>
-             <li data-dropdown class="buckman__li calcados menu-dropdown">
-                <a href="#">CALÇADOS</a>
+             <li data-dropdown class="buckman__li alfaiatarias menu-dropdown">
+                <a class="alfaiatarias" href="#">ALFAIATARIAS</a>
+                <div class="dropdown-wrapper">
+                  <div class="dropdown-wrapper-header">
+                    <span>ALFAIATARIAS</span>
+                    <button data-menu="dropdown-wrapper-close" class=dropdown-wrapper-close">
+                      <img src="./assets/svg/x-close.svg"/>
+                    </button>
+                  </div>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                    <li><a href="#">item</a></li>
+                  </ul>
+                </div>
+              </li>
+               <li data-dropdown class="buckman__li calcados menu-dropdown">
+                <a class="calcados" href="#">CALÇADOS</a>
                 <div class="dropdown-wrapper">
                   <div class="dropdown-wrapper-header">
                     <span>Calçados</span>
