altera funionalidade até 640px

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
                     </button>
                   </div>
                   <ul class="dropdown-menu">
-                    <li><a href="#">item</a></li>
-                    <li><a href="#">item</a></li>
-                    <li><a href="#">item</a></li>
-                    <li><a href="#">item</a></li>
-                    <li><a href="#">item</a></li>
+                    <li><a href="#">Blusas</a></li>
+                    <li><a href="#">Calças</a></li>
+                    <li><a href="#">Calças Jeans</a></li>
+                    <li><a href="#">Camisas</a></li>
+                    <li><a href="#">Camisetas</a></li>
                   </ul>
                 </div>
               </li>
