--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
             
             <ul data-menu="list" id="menu" class="buckman__ul">
-              <li data-dropdown class="buckman__li roupas menu-dropdown">
+              <li data-dropdown="menu-dropdown" class="buckman__li roupas menu-dropdown">
                 <a class="roupas" href="#">ROUPAS</a>
                 <div class="dropdown-wrapper">
                   <div class="dropdown-wrapper-header">
@@ -92,7 +92,7 @@
                     <li><a href="#">item</a></li>
                   </ul>
                 </div>
-              </li><li data-dropdown class="buckman__li novidades menu-dropdown">
+              </li><li data-dropdown="menu-dropdown" class="buckman__li novidades menu-dropdown">
                 <a class="novidades" href="#">NOVIDADES</a>
                 <div class="dropdown-wrapper">
                   <div class="dropdown-wrapper-header">
@@ -111,7 +111,7 @@
                 </div>
               </li>
                
-              <li data-dropdown class="buckman__li BASICOS menu-dropdown">
+              <li data-dropdown="menu-dropdown" class="buckman__li BASICOS menu-dropdown">
                 <a class="BASICOS" href="#">BÁSICOS</a>
                 <div class="dropdown-wrapper">
                   <div class="dropdown-wrapper-header">
@@ -129,7 +129,7 @@
                   </ul>
                 </div>
               </li>
-             <li data-dropdown class="buckman__li alfaiatarias menu-dropdown">
+             <li data-dropdown="menu-dropdown" class="buckman__li alfaiatarias menu-dropdown">
                 <a class="alfaiatarias" href="#">ALFAIATARIAS</a>
                 <div class="dropdown-wrapper">
                   <div class="dropdown-wrapper-header">
@@ -147,7 +147,7 @@
                   </ul>
                 </div>
               </li>
-               <li data-dropdown class="buckman__li calcados menu-dropdown">
+               <li data-dropdown="menu-dropdown"class="buckman__li calcados menu-dropdown">
                 <a class="calcados" href="#">CALÇADOS</a>
                 <div class="dropdown-wrapper">
                   <div class="dropdown-wrapper-header">
@@ -165,7 +165,7 @@
                   </ul>
                 </div>
               </li>
-              <li data-dropdown class="buckman__li outlet menu-dropdown">
+              <li data-dropdown="menu-dropdown" class="buckman__li outlet menu-dropdown">
                 <a class="outlet" href="#">OUTLET</a>
                 <div class="dropdown-wrapper">
                   <div class="dropdown-wrapper-header">
